--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "appdesigner",
         "Benavides",
         "desagregación",
+        "Distrital",
         "epistémicas",
         "frecuencial",
         "Geomatica",
